--- a/app/view/register/register.html
+++ b/app/view/register/register.html
@@ -26,13 +26,13 @@
                 <p class="login-big-font">用户注册</p>
                 <input ng-model="username" class="phone-num login-input" placeholder="请输入用户名（手机号）" type="text">
                 <span class="tips username_mes"></span>
-                <input ng-model="nickname" class="nick-name login-input" placeholder="请输入昵称" type="text">
+                <input ng-model="nickname" class="nick-name login-input" placeholder="请输入昵称（4-8位）" type="text">
                 <span class="tips nickname_mes"></span>
                 <input ng-model="password" class="password-first login-input" placeholder="请输入密码（6-16位）" type="password">
                 <span class="tips password_mes"></span>
                 <input ng-model="confirm" class="password-sure  login-input" placeholder="再次输入确认密码" type="password">
                 <span class="tips password_sure"></span>
-                <button ng-click="login()" class="login-btn">注册</button>
+                <button ng-click="register()" class="login-btn">注册</button>
             </div>
         </div>
     </div>
