--- a/app/view/microIndustryChain/discoverChainView/discoverChainView.css
+++ b/app/view/microIndustryChain/discoverChainView/discoverChainView.css
@@ -93,3 +93,51 @@ html, body {
     width: 150px;
     height: 30px;
 }
+.graphLiContainer{
+    width: 100%;
+    /*height: 300px;*/
+    /*background: #00b3ee;*/
+}
+.graphList{
+    padding-top: 10px;
+    width: 920px;
+    /*height: 200px;*/
+    background: white;
+    margin-left: 40px;
+}
+.graphLiDiv{
+    margin:0 auto ;
+    padding-top: 22px;
+    width: 92%;
+    height: 60px;
+    border-bottom: #E9E9E9 solid;
+    cursor: pointer;
+}
+.graphLiDiv:hover,.graphLiDiv:focus{
+    background: #E9E9E9;
+}
+.graph-li-title{
+    margin-left: 10px;
+    color: #3e3e3e;
+    font-size: 16px;
+}
+.graph-li-author{
+    margin-left: 20%;
+    color: #9d9d9d;
+    font-size: 14px;
+}
+.graph-li-time{
+    margin-left: 10%;
+    color: #9d9d9d;
+    font-size: 14px;
+}
+.graph-li-view{
+    margin-left: 10%;
+    color: #9d9d9d;
+    font-size: 14px;
+}
+.graph-li-con{
+    display: inline;
+    /*padding-top: 50%;*/
+    /*margin-top: 50%;*/
+}
