--- a/app/view/microIndustryChain/discoverChainView/discoverChainView.html
+++ b/app/view/microIndustryChain/discoverChainView/discoverChainView.html
@@ -3,7 +3,7 @@
 
 
     <div class="graphContainer">
-        <div ui-sref="microIndustryChain.previewChainView({'graphid':graph.graphid})" class="graphCell" ng-repeat="graph in allGraphList">
+        <div ui-sref="microIndustryChain.previewChainView({'graphid':graph.graphid})" class="graphCell" ng-repeat="graph in allGraphList | limitTo:4">
             <div>
                 <img  src="view/microIndustryChain/mineChainView/cover.png"  class="graph-cover">
             </div>
@@ -13,6 +13,24 @@
             <div class="graph-time">
                 发布于{{graph.graphid.substring(2,6)}}-{{graph.graphid.substring(6,8)}}-{{graph.graphid.substring(8,10)}} {{graph.graphid.substring(10,12)}}:{{graph.graphid.substring(12,14)}}
             </div>
+        </div>
+    </div>
+    <div class="graphLiContainer">
+        <div class="graphList">
+            <div  ui-sref="microIndustryChain.previewChainView({'graphid':graph.graphid})" class = "graphLiDiv" ng-repeat="graph in allGraphList" >
+                <div class="graph-li-title graph-li-con">
+                    关于XX政策的汽车产业链模型详细分析2
+                </div>
+                <div class="graph-li-author graph-li-con">
+                    周益冰
+                </div>
+                <div class="graph-li-time graph-li-con">
+                    {{graph.graphid.substring(2,6)}}-{{graph.graphid.substring(6,8)}}-{{graph.graphid.substring(8,10)}} {{graph.graphid.substring(10,12)}}:{{graph.graphid.substring(12,14)}}
+                </div>
+                <div class="graph-li-view graph-li-con">
+                    11
+                </div>
+            </div>>
         </div>
     </div>
 
