--- a/app/view/microIndustryChain/discoverChainView/discoverChainView.css
+++ b/app/view/microIndustryChain/discoverChainView/discoverChainView.css
@@ -17,7 +17,7 @@
     display: block;
     position: relative;
     width: 200px;
-    height: 280px;
+    height: 290px;
     margin-left: 40px;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -76,6 +76,9 @@ html, body {
     height: 150px;
 }
 
+.graph-mes{
+    margin-top: 10px;
+}
 .graph-title {
     color: #878787;
     font-size: 14px;
@@ -83,10 +86,46 @@ html, body {
 }
 
 .graph-time {
+    display: inline;
+    /*margin-top: 15px;*/
+    font-size: 12px;
+    /*padding-top: 15px;*/
+    color: #a3a3a3;
+    margin-left: 10px;
+}
+.graph-author{
+    display: inline;
+    /*margin-top: 15px;*/
+    /*padding-top: 15px;*/
+    font-size: 13px;
+    color: #a3a3a3;
+}
+.graph-view-num{
     margin-top: 10px;
+    display: inline;
+    font-size: 12px;
+    color: #a3a3a3;
+
+}
+
+.graph-like-num{
+    margin-top: 10px;
+    display: inline;
+    margin-left: 30px;
     font-size: 12px;
     color: #a3a3a3;
 }
+.graph-like-num img{
+    width: 12px;
+    height: 11px;
+    margin-right: 5px;
+}
+
+.graph-view-num img{
+    width: 12px;
+    margin-right: 5px;
+}
+
 
 .graph-select{
     float: right;
@@ -94,6 +133,7 @@ html, body {
     height: 30px;
 }
 .graphLiContainer{
+
     width: 100%;
     /*height: 300px;*/
     /*background: #00b3ee;*/
@@ -104,6 +144,9 @@ html, body {
     /*height: 200px;*/
     background: white;
     margin-left: 40px;
+    -webkit-box-shadow: 0 0 10px #a3a3a3;
+    -moz-box-shadow: 0 0 10px #a3a3a3;
+    box-shadow: 0 0 10px #a3a3a3;
 }
 .graphLiDiv{
     margin:0 auto ;
@@ -129,12 +172,12 @@ html, body {
 .graph-li-time{
     margin-left: 10%;
     color: #9d9d9d;
-    font-size: 14px;
+    font-size: 13px;
 }
 .graph-li-view{
-    margin-left: 10%;
+    margin-left: 8%;
     color: #9d9d9d;
-    font-size: 14px;
+    font-size: 13px;
 }
 .graph-li-con{
     display: inline;
