--- a/app/view/microIndustryChain/discoverChainView/discoverChainView.html
+++ b/app/view/microIndustryChain/discoverChainView/discoverChainView.html
@@ -10,8 +10,23 @@
             <div class="graph-title">
                 关于XX政策的汽车产业链模型详细分析2
             </div>
-            <div class="graph-time">
-                发布于{{graph.graphid.substring(2,6)}}-{{graph.graphid.substring(6,8)}}-{{graph.graphid.substring(8,10)}} {{graph.graphid.substring(10,12)}}:{{graph.graphid.substring(12,14)}}
+            <div class="graph-mes">
+                <div class = "graph-author">
+                    周益冰
+                </div>
+                <div class="graph-time">
+                    {{graph.graphid.substring(2,6)}}-{{graph.graphid.substring(6,8)}}-{{graph.graphid.substring(8,10)}} {{graph.graphid.substring(10,12)}}:{{graph.graphid.substring(12,14)}}
+                </div>
+            </div>
+            <div>
+                <div class="graph-view-num">
+                    <img src="view/microIndustryChain/discoverChainView/images/浏览.png">
+                    123233
+                </div>
+                <div class="graph-like-num">
+                    <img src="view/microIndustryChain/discoverChainView/images/点赞.png">
+                    12321
+                </div>
             </div>
         </div>
     </div>
@@ -28,7 +43,8 @@
                     {{graph.graphid.substring(2,6)}}-{{graph.graphid.substring(6,8)}}-{{graph.graphid.substring(8,10)}} {{graph.graphid.substring(10,12)}}:{{graph.graphid.substring(12,14)}}
                 </div>
                 <div class="graph-li-view graph-li-con">
-                    11
+                    <img style="width:18px" src="view/microIndustryChain/discoverChainView/images/浏览.png">
+                    11111
                 </div>
             </div>>
         </div>
