行业因子分析部分chart

--- a/app/view/industryFactorAnalyze/industryFactorAnalyze.html
+++ b/app/view/industryFactorAnalyze/industryFactorAnalyze.html
@@ -100,5 +100,11 @@
             </div>
         </div>
     </div>
+
+    <div id="ICOriginalChart" style="width: 700px; height: 400px;"></div>
+    <div id="ICSeriesChart" style="width: 700px; height: 400px;"></div>
+    <div id="ICQQChart" style="width: 700px; height: 400px;"></div>
+    <div id="ICHeatMapChart" style="width: 700px; height: 400px;"></div>
+    <div id="ICValueChart" style="width: 700px; height: 400px;"></div>
 </div>
 <link rel="stylesheet" href="view/industryFactorAnalyze/industryFactorAnalyze.css"/>
