--- a/app/view/industryFactorAnalyze/industryFactorAnalyze.css
+++ b/app/view/industryFactorAnalyze/industryFactorAnalyze.css
@@ -1,13 +1,18 @@
+.clearfix{
+    clear: both;
+}
+
 .container{
-    width: 50%;
-    margin: auto;
-    padding-bottom: 10%;
+    width: 100%;
+    /*margin: auto;*/
+    padding: 0 0 10% 0;
+    text-align: center;
 }
 .part{
     position: relative;
 }
 .part .index_container{
-    display: inline-block;
+    /*display: inline-block;*/
 
 }
 .part .index_container .list_container{
@@ -19,7 +24,8 @@
 }
 
 .part .index_container .section{
-
+    margin: 0px 0px 55px 0px;
+    padding: 30px 0 30px 0;
     /*max-height: 300px;*/
 }
 .part .description_container{
@@ -29,6 +35,164 @@
     top: 0;
     margin-left: 20%;
 
+}
+
+.container h1 {
+    font-size: 28px;
+    color: rgb(101,119,210);
+    text-align: center;
+}
+.part .selected_container{
+    text-align: center;
+    font-size: 20px;
+    margin: 10px 0;
+}
+.part .title_recommend{
+    text-align: center;
+    font-size: 24px;
+    margin-bottom: 35px;
+}
+.part .item_recommend{
+    width: 250px;
+    height: 230px;
+    padding: 50px 0px 30px 0px;
+    margin: 0px 20px 0px 20px;
+    display: inline-block;
+    vertical-align: center;
+    cursor: pointer;
+    transition: scale ease-in-out 0.3s;
+}
+.part .item_recommend.active{
+    transform: scale(1.1);
+    transition: ease-in-out 0.3s;
+}
+
+.part .item_recommend div{
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+
+    margin-top: 35px;
+}
+
+.part .section .item_index{
+    margin: 15px 15px 15px 15px;
+    border: 1px solid rgb(208,208,208);
+    border-radius: 5px;
+    min-width: 250px;
+    font-size: 16px;
+    padding: 14px;
+    background-color: white;
+    color: inherit;
+
+    vertical-align: middle;
+    display: inline-block;
+    float: left;
+    cursor: pointer;
+    transition: color ease-in-out 0.3s;
+}
+.part .section .item_index.active {
+    background-color: rgb(101,119,210);
+    color: white;
+}
+.part .indexItem_container{
+    width: 80%;
+    margin: 30px auto;
+}
+
+.part .item_method{
+    width: 220px;
+    height: 260px;
+    padding: 50px 35px 30px 35px;
+    margin: 0px 10px 0px 10px;
+    display: inline-block;
+    vertical-align: top;
+    color: white;
+    cursor: pointer;
+    /*transition: scale ease-in-out 0.3s;*/
+}
+.part .item_method.active {
+    transform: scale(1.1);
+    transition: ease-in-out 0.3s;
+}
+
+.part .item_method h4{
+    font-size: 20px;
+}
+.part .item_method p{
+    margin-top: 25px;
+    font-size: 15px;
+}
+.btn_analyze{
+    background: url("pic_industryFactorAnalyze/圆角矩形 1 拷贝 12.png") no-repeat;
+    background-size: 100% 100%;
+    border: none;
+    width: 550px;
+    height: 40px;
+    font-size: 20px;
+
+    margin: 60px 0;
+}
+
+.ratio_container{
+    margin-bottom: 80px;
+}
+.ratio_container h3{
+    margin-bottom: 25px;
+    font-weight: bold;
+}
+.ratio_container .item_ratio{
+    display: inline-block;
+    font-size: 18px;
+    margin: 20px 15px 30px 15px;
+    /*float: left;*/
+}
+.ratio_container .item_ratio input{
+    border: none;
+    border-radius: 3px;
+    background-color: rgb(225, 227, 240);
+}
+.ratio_container .ratioItem_container{
+    width: 80%;
+    margin: 0 auto;
+}
+
+.ratio_container .btn_sureToAnalyze{
+    background: url("pic_industryFactorAnalyze/圆角矩形 1 拷贝 13.png") no-repeat;
+    background-size: 100% 100%;
+    border: none;
+    width: 300px;
+    height: 40px;
+    font-size: 20px;
+}
+
+.resultAndDetail{
+    background: url("pic_industryFactorAnalyze/圆角矩形 2.png");
+    background-size: 100% 100%;
+    width: 800px;
+    height: 350px;
+    margin: 0 auto 80px auto;
+}
+.resultAndDetail .analyzeResult{
+
+}
+.resultAndDetail .analyzeResult .title_result{
+    background: url("pic_industryFactorAnalyze/矩形 2.png");
+    background-size: 100% 100%;
+    width: 200px;
+    height: 35px;
+    line-height: 35px;
+    color: white;
+    font-size: 20px;
+    display: inline-block;
+    margin-bottom: 25px;
+}
+.resultAndDetail .analyzeResult .item_result{
+    font-size: 18px;
+    margin-bottom: 25px;
+}
+.resultAndDetail .analyzeDetail{
+    font-size: 18px;
 }
 
 a{
@@ -65,28 +229,6 @@ button::-moz-focus-inner {
     margin: 0;
     padding: 0;
     border: 0;
-}
-
-
-/* ===[ Default hover ]=== */
-
-button:hover, .button:active {
-    text-decoration: none;
-    background-color: #F9F9F9;
-}
-
-/* ===[ Default active ]=== */
-
-button:active {
-    top: 1px;
-    margin-bottom: 1px;
-    border-bottom-width: 1px;
-    background-color: #F9F9F9;
-    background-image: -moz-linear-gradient(rgba(0,0,0,0.2), rgba(255,255,255,0.2));
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0,0,0,0.2)), color-stop(100%, rgba(255,255,255,0.2)));
-    background-image: -webkit-linear-gradient(rgba(0,0,0,0.2), rgba(255,255,255,0.2));
-    background-image: -o-linear-gradient(rgba(0,0,0,0.2), rgba(255,255,255,0.2));
-    background-image: linear-gradient(rgba(0,0,0,0.2), rgba(255,255,255,0.2));
 }
 
 table{
