微观分析界面美化，我的产业链部分添加假封面，构建产业链部分修正返回按钮

--- a/app/view/microIndustryChain/createChainView/createChainView.html
+++ b/app/view/microIndustryChain/createChainView/createChainView.html
@@ -125,10 +125,10 @@
 
     </div>
 
-    <button class="back-menu">
+    <button class="back-menu" ui-sref="microIndustryChain.mineChainView">
 
         <img src="view/microIndustryChain/createChainView/icon/back.png">
-        <div class="back-menu-text" ui-sref="microIndustryChain.mineChainView"> 返回我的产业链</div>
+        <div class="back-menu-text" > 返回我的产业链</div>
 
     </button>
 
