--- a/app/view/microIndustryChain/microChainAnalysis/publicOpinion/myModal.html
+++ b/app/view/microIndustryChain/microChainAnalysis/publicOpinion/myModal.html
@@ -1,9 +1,8 @@
 <link rel="stylesheet" href="view/microIndustryChain/microChainAnalysis/publicOpinion/myModal.css">
 
-<div class="modal-header">
-    <h4 class="modal-title" style="text-align: center">  {{title}}</h4>
-</div>
-<div class="modal-body" id="body">
+
+<div class="modal-body"  style="padding: 50px" id="body">
+    <div class="public-opinion-tittle">{{title}}</div>
 
     <table id="opinionsTable">
 
@@ -28,7 +27,4 @@
     </table>
 
 
-</div>
-<div class="modal-footer">
-    <button class="btn btn-primary" type="button" ng-click="ok()">确认</button>
 </div>
