--- a/app/view/microIndustryChain/microChainAnalysis/publicOpinion/publicOpinion.html
+++ b/app/view/microIndustryChain/microChainAnalysis/publicOpinion/publicOpinion.html
@@ -1,18 +1,16 @@
-
 <link rel="stylesheet" href="view/microIndustryChain/microChainAnalysis/publicOpinion/publicOpinion.css">
 
-<div class="modal-header">
-    <h3 class="modal-title">关于公司 “{{name}}” 的舆情分析</h3>
-</div>
+
 <div class="modal-body" id="body">
 
+    <div class="public-opinion-tittle">舆情分析</div>
 
-    <div  id="pieChart"  ></div>
+    <div id="pieChart"></div>
 
-    <div id="cloud" ></div>
+    <div id="cloud"></div>
 
 
 </div>
 <div class="modal-footer">
-    <button class="btn btn-primary" type="button" ng-click="openModal()">查看所有舆情</button>
+    <button class="btn specific-button" type="button" ng-click="openModal()">查看所有舆情</button>
 </div>
