--- a/app/view/microIndustryChain/microChainAnalysis/financialContrast/contrastTable.css
+++ b/app/view/microIndustryChain/microChainAnalysis/financialContrast/contrastTable.css
@@ -1,9 +1,28 @@
+.specific-button {
+    background-color: rgb(101, 119, 210);
+    color: white;
+    font-size: 16px;
+}
+
+.specific-button:hover {
+    background-color: rgb(101, 119, 210);
+    color: white;
+    font-size: 16px;
+}
+
+.contrast-table-tittle{
+    font-size: 22px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 20px;
+}
 table
 {
     border-collapse: collapse;
     margin: 0 auto;
     text-align: center;
 }
+
 table td, table th
 {
     border: 1px solid #cad9ea;
