--- a/app/view/microIndustryChain/microChainAnalysis/financialContrast/financialContrast.css
+++ b/app/view/microIndustryChain/microChainAnalysis/financialContrast/financialContrast.css
@@ -3,12 +3,36 @@ input {
     width: 300px;
 }
 
+.financial-title {
+    font-size: 22px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
 select {
     height: 30px;
     width: 300px;
 }
 
-.modal-dialog{
-    width: 30%!important;
-    margin: 20% auto;
+label{
+    width: 150px;
+}
+
+.modal-dialog {
+    width: 30% !important;
+    min-width: 600px;
+    margin: 15% auto;
+}
+
+.specific-button {
+    background-color: rgb(101, 119, 210);
+    color: white;
+    font-size: 16px;
+}
+
+.specific-button:hover {
+    background-color: rgb(101, 119, 210);
+    color: white;
+    font-size: 16px;
 }
