--- a/app/view/microIndustryChain/microChainAnalysis/peAnalysis/peAnalysis.css
+++ b/app/view/microIndustryChain/microChainAnalysis/peAnalysis/peAnalysis.css
@@ -1,4 +1,15 @@
 
+.modal-dialog {
+    min-width: 1200px;
+    margin-top: 5%;
+}
+
+.pe-tittle {
+    font-size: 22px;
+    font-weight: bold;
+    text-align: center;
+}
+
 .large-font {
     font-size: 24px;
     font-weight: bold;
@@ -22,7 +33,8 @@
 .transparent-btn {
     background-color: transparent;
     border: 0 solid transparent;
-    outline: none;!important;
+    outline: none;
+!important;
 }
 
 .lower-pe {
@@ -50,9 +62,28 @@
 }
 
 .rank-container {
-    max-height: 520px;
+    max-height: 600px;
     overflow-y: auto;
     overflow-x: hidden;
+}
+
+.rank-container::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+
+    margin: 0 auto;
+}
+
+.rank-container::-webkit-scrollbar-thumb {
+
+    background-color: #eeeeee;
+    border-radius: 6px;
+}
+
+.rank-container::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px #fbfbfb;
+    background-color: #fbfbfb;
+
 }
 
 .rank-item {
@@ -108,10 +139,25 @@
     transform: rotateZ(90deg);
 }
 
-.circle1 { top: 0; left: 0; }
-.circle2 { top: 0; right: 0; }
-.circle3 { right: 0; bottom: 0; }
-.circle4 { left: 0; bottom: 0; }
+.circle1 {
+    top: 0;
+    left: 0;
+}
+
+.circle2 {
+    top: 0;
+    right: 0;
+}
+
+.circle3 {
+    right: 0;
+    bottom: 0;
+}
+
+.circle4 {
+    left: 0;
+    bottom: 0;
+}
 
 .container2 .circle1 {
     -webkit-animation-delay: -1.1s;
@@ -169,16 +215,21 @@
 }
 
 @-webkit-keyframes bouncedelay {
-    0%, 80%, 100% { -webkit-transform: scale(0.0) }
-    40% { -webkit-transform: scale(1.0) }
+    0%, 80%, 100% {
+        -webkit-transform: scale(0.0)
+    }
+    40% {
+        -webkit-transform: scale(1.0)
+    }
 }
 
 @keyframes bouncedelay {
     0%, 80%, 100% {
         transform: scale(0.0);
         -webkit-transform: scale(0.0);
-    } 40% {
-          transform: scale(1.0);
-          -webkit-transform: scale(1.0);
-      }
+    }
+    40% {
+        transform: scale(1.0);
+        -webkit-transform: scale(1.0);
+    }
 }
