--- a/app/view/microIndustryChain/microChainAnalysis/publicOpinion/myModal.css
+++ b/app/view/microIndustryChain/microChainAnalysis/publicOpinion/myModal.css
@@ -1,18 +1,16 @@
 
-
-#body{
+#body {
     z-index: auto;
 }
 
-.topWindow{
+.topWindow {
     z-index: 1060;
 
 }
-.topWindow .modal-dialog{
+
+.topWindow .modal-dialog {
     width: 70% !important;
 }
-
-
 
 table, th, td {
     border: 1px solid grey;
@@ -20,8 +18,9 @@ table, th, td {
     padding: 5px;
 
 }
+
 table {
-   width: 100%;
+    width: 100%;
 }
 
 table tr:nth-child(odd) {
@@ -31,4 +30,23 @@ table tr:nth-child(odd) {
 
 table tr:nth-child(even) {
     background-color: #ffffff;
+}
+
+.specific-button {
+    background-color: rgb(101, 119, 210);
+    color: white;
+    font-size: 16px;
+}
+
+.specific-button :hover {
+    background-color: rgb(101, 119, 210);
+    color: white;
+    font-size: 16px;
+}
+
+.public-opinion-tittle {
+    font-size: 22px;
+    text-align: center;
+    font-weight: bold;
+    margin-bottom: 30px;
 }
