--- a/app/view/microIndustryChain/mineChainView/mineChainView.css
+++ b/app/view/microIndustryChain/mineChainView/mineChainView.css
@@ -17,9 +17,9 @@
     display: block;
     position: relative;
     width: 200px;
-    height: 280px;
+    height: 260px;
     margin-left: 40px;
-    margin-top: 20px;
+    margin-top: 40px;
     margin-bottom: 20px;
     background: white;
     cursor: pointer;
@@ -71,24 +71,26 @@ html, body {
     margin: 40px;
 }
 
-.graph-cover{
+.graph-cover {
     width: 150px;
-    height: 150px;
+    height: 180px;
 }
 
 .graph-title {
-    color: #878787;
+    color: white;
     font-size: 14px;
     margin-top: 20px;
 }
 
 .graph-time {
-    margin-top: 10px;
+
+    margin-top: 20px;
+    padding-left: 2px;
     font-size: 12px;
     color: #a3a3a3;
 }
 
-.graph-select{
+.graph-select {
     float: right;
     width: 150px;
     height: 30px;
