--- a/app/view/microIndustryChain/mineChainView/mineChainView.html
+++ b/app/view/microIndustryChain/mineChainView/mineChainView.html
@@ -15,13 +15,10 @@
    <div class="graphContainer">
        <div class="graphCell" ui-sref="microIndustryChain.createChainView({'graphid':graph.graphid})" ng-repeat="graph in ownGraphList">
             <div>
-                <img  src="view/microIndustryChain/mineChainView/cover.png"  class="graph-cover">
+                <img  src={{graph.cover}}  class="graph-cover">
             </div>
-           <div class="graph-title">
-                关于XX政策的汽车产业链模型详细分析2
-           </div>
            <div class="graph-time">
-               发布于{{graph.graphid.substring(2,6)}}-{{graph.graphid.substring(6,8)}}-{{graph.graphid.substring(8,10)}} {{graph.graphid.substring(10,12)}}:{{graph.graphid.substring(12,14)}}
+               发布于  {{graph.graphid.substring(2,6)}}-{{graph.graphid.substring(6,8)}}-{{graph.graphid.substring(8,10)}} {{graph.graphid.substring(10,12)}}:{{graph.graphid.substring(12,14)}}
            </div>
        </div>
    </div>
