行业地位点击是默认到上市地位，主要上市公司到财务比率比较

--- a/app/view/macroIndustryDisplay/macroIndustryDisplay.html
+++ b/app/view/macroIndustryDisplay/macroIndustryDisplay.html
@@ -28,14 +28,14 @@
 
         </div>
         <!--<a class="nav" ui-sref="macroIndustryDisplay.sellNum">经济数据</a>-->
-        <a class="nav" ng-mouseover="showDataPane3()"  ng-mouseleave="hideDataPane3()">行业地位</a>
+        <a class="nav" ui-sref="macroIndustryDisplay.hyssdw" ng-mouseover="showDataPane3()"  ng-mouseleave="hideDataPane3()">行业地位</a>
         <div class="dataPane" style="margin-left: 122px;height: 82px;width: 130px" ng-mouseover="showDataPane3()"  ng-mouseleave="hideDataPane3()" ng-show='toshowDataPane3'>
             <a ui-sref="macroIndustryDisplay.hyssdw">行业上市地位</a><br>
             <a ui-sref="macroIndustryDisplay.hylsbj">行业历史比较</a><br>
             <a ui-sref="macroIndustryDisplay.scbxdb" >市场表现对比</a><br>
         </div>
 
-        <a class="nav" ng-mouseover="showDataPane4()"  ng-mouseleave="hideDataPane4()">主要上市公司</a>
+        <a class="nav" ui-sref="macroIndustryDisplay.cwbl" ng-mouseover="showDataPane4()"  ng-mouseleave="hideDataPane4()">主要上市公司</a>
         <div class="dataPane" style="margin-left: 290px;height: 132px;width: 130px" ng-mouseover="showDataPane4()"  ng-mouseleave="hideDataPane4()" ng-show='toshowDataPane4'>
             <a ui-sref="macroIndustryDisplay.cwbl">财务比率比较</a><br>
             <a ui-sref="macroIndustryDisplay.cwsj">财务数据比较</a><br>
